tests/error/misc_errors/return_not_annotated.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool):
    return x
