tests/error/misc_errors/return_not_annotated.err
Error: Missing type annotation (at $FILE:5:0)
  | 
3 | 
4 | @compile_guppy
5 | def foo(x: bool):
  | ^^^^^^^^^^^^^^^^^
6 |     return x
  | ^^^^^^^^^^^^ Return type must be annotated

Guppy compilation failed due to 1 previous error
